# questionnaire

./: .gitignore  main.py  pyproject.toml  requirements.txt  restart.sh  run.sh  stop.sh
.trae/rules/: project_rules.md
applications/: config.py
applications/common/script/: __init__.py  admin.py  question.py
applications/common/utils/: http.py
applications/models/: __init__.py  admin_questionnaire.py  questionnaire.py  questionnaire_response.py  user_notice.py
applications/schemas/: __init__.py  questionnaire.py
applications/view/: __init__.py  frontend.py
applications/view/system/: __init__.py  dashboard.py  index.py  notice.py  questionnaire.py  rights.py  user.py
docs/: v1.1.md
requirements/: README.md
requirements/modules/user_notice/: requirement.md  tasks.md
requirements/templates/: requirement_template.md  task_template.md
static/system/questionnaire/css/: design.css  question_edit.css
static/system/questionnaire/js/: design.js  question_edit.js
templates/frontend/: notice.html
templates/system/: index.html  login.html
templates/system/console/: console.html
templates/system/notice/: add.html  confirm_detail.html  confirm_main.html  edit.html  main.html
templates/system/questionnaire/: add.html  design.html  edit.html  fill.html  main.html  preview.html  question_edit.html  question_toggle_rule.html  response_detail.html  response_main.html
templates/system/user/: center.html
