[project]
name = "questionnaire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.11.1",
    "apscheduler==3.10.1",
    "blinker==1.6.2",
    "cffi==1.15.1",
    "click==8.1.6",
    "colorama==0.4.6",
    "cryptography==41.0.2",
    "decorator==5.1.1",
    "flask==2.3.2",
    "flask-apscheduler==1.12.4",
    "flask-login==0.6.2",
    "flask-mail==0.9.1",
    "flask-marshmallow==0.15.0",
    "flask-migrate==4.0.4",
    "flask-reuploaded==1.3.0",
    "flask-session==0.5.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "greenlet==2.0.2",
    "importlib-metadata==6.8.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "mako==1.2.4",
    "markupsafe==2.1.3",
    "marshmallow==3.20.1",
    "marshmallow-sqlalchemy==0.29.0",
    "packaging==23.1",
    "pillow==10.0.0",
    "psutil==5.9.5",
    "pycparser==2.21",
    "pymysql==1.1.0",
    "pytest>=8.4.2",
    "pytest-flask>=1.3.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "six==1.16.0",
    "sqlalchemy==2.0.21",
    "style==1.1.0",
    "typing-extensions==4.7.1",
    "tzdata==2023.3",
    "tzlocal==5.0.1",
    "update==0.0.1",
    "validators==0.20.0",
    "werkzeug==2.3.6",
    "wtforms~=3.1.1",
    "zipp==3.16.2",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
